# security-learning-exercises

./: README.md
xiaoan/: 01_rust_unsafe.rs  02_zig_hello.zig  03_memory_safety.rs
xiaoan/day2/: Cargo.toml  README.md
xiaoan/day2/src/: main.rs
