[package]
name = "port_scanner"
version = "0.1.0"
edition = "2021"
authors = ["xiaoan"]
description = "Fast port scanner with multi-threaded concurrent scanning"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
